# arctis-sound-manager

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DESIGN.md  KNOWN_ISSUES.md  README.md  package.json  pipewire-1.4.11-1.fc43.src.rpm
.github/workflows/: ci.yml  release.yml
LICENSES/hrir/: README.md
crates/audio/: Cargo.toml
crates/audio/src/: backend.rs  channels.rs  config.rs  eq.rs  error.rs  lib.rs  mic.rs  props.rs  pw_version.rs  routing.rs  runner.rs  sinks.rs  streams.rs  surround.rs
crates/cli/: Cargo.toml
crates/cli/src/: coexist.rs  daemon.rs  dial.rs  main.rs  route_watcher.rs  setup_udev.rs
crates/cli/tests/: version.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  lib.rs  protocol.rs
crates/client/tests/: echo.rs
crates/config/: Cargo.toml
crates/config/src/: error.rs  lib.rs  migrate.rs  profile_ops.rs  schema.rs  store.rs
crates/config/tests/: store_roundtrip.rs
crates/device/: Cargo.toml
crates/device/examples/: hid_dump.rs
crates/device/src/: codec.rs  controller.rs  descriptor.rs  error.rs  hidraw.rs  lib.rs  mock.rs  registry.rs  transport.rs
crates/domain/: Cargo.toml
crates/domain/src/: capability.rs  device.rs  eq_bounds.rs  lib.rs  status.rs
crates/engine/: Cargo.toml
crates/engine/src/: children.rs  convert.rs  device.rs  engine.rs  error.rs  factory_profiles.rs  hrir_catalog.rs  hrir_import.rs  lib.rs  presets.rs  state.rs
crates/engine/src/engine/: channels.rs  device_ctl.rs  eq.rs  mic.rs  mod.rs  profiles.rs  reconcile.rs  routing.rs  surround.rs  test_support.rs  volume.rs
crates/engine/src/engine/eq/: tests.rs
crates/engine/src/engine/mic/: tests.rs
crates/engine/src/engine/reconcile/: tests.rs
crates/engine/src/engine/routing/: tests.rs
crates/engine/src/engine/surround/: tests.rs
crates/engine/src/engine/surround/tests/: apply_tests.rs
crates/engine/src/engine/volume/: tests.rs
devices/: steelseries_nova_pro_wireless.toml
docs/: PACKAGING.md
docs/superpowers/plans/: 2026-06-20-audio-engine-foundation.md  2026-06-20-device-control.md  2026-06-20-engine-orchestrator-config.md  2026-06-20-foundation-and-device-read.md  2026-06-20-mic-chain.md  2026-06-20-multichannel-routing.md  2026-06-20-tauri-ui.md  2026-06-27-eq-gui-redesign.md  2026-06-27-mixer-fixes-and-daemon-resilience.md  2026-06-27-sonar-mixer-redesign.md  2026-06-28-eq-mic-preset-packs.md  2026-06-28-mixer-redesign.md  2026-06-28-mixer-volume-coexist-fixes.md  2026-06-29-daemon-unavailable-consolidation.md  2026-06-29-dayz-competitive-surround-profile.md  2026-06-29-distribution-and-auto-update.md  2026-06-29-gui-daemon-control.md  2026-06-29-spatial-hrir-overhaul.md  2026-06-30-surround-input-indicator.md  2026-06-30-system-tray.md
docs/superpowers/specs/: 2026-06-20-arctis-sound-manager-design.md  2026-06-27-eq-gui-redesign-design.md  2026-06-27-mixer-fixes-and-daemon-resilience-design.md  2026-06-27-sonar-mixer-redesign-design.md  2026-06-28-eq-mic-preset-packs-design.md  2026-06-28-mixer-redesign-design.md  2026-06-29-daemon-unavailable-consolidation-design.md  2026-06-29-dayz-competitive-surround-profile.md  2026-06-29-distribution-and-auto-update-design.md  2026-06-29-gui-daemon-control-design.md  2026-06-29-spatial-hrir-overhaul-design.md  2026-06-30-surround-input-indicator-design.md  2026-06-30-system-tray-design.md
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.svelte  main.ts
frontend/src/lib/: connection.test.ts  connection.ts  daemonControl.test.ts  daemonControl.ts  daemonUnavailable.test.ts  daemonUnavailable.ts  device.test.ts  deviceControls.test.ts  deviceControls.ts  eq.test.ts  eq.ts  ipc.test.ts  ipc.ts  mic.ts  (+10 more)
packaging/: arctis-sound-manager.desktop
packaging/systemd/: arctis-sound-manager.service
packaging/udev/: 70-arctis-sound-manager.rules
scripts/: check-version.sh  install-appimage.sh  stage-sidecar.sh
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  daemon_control.rs  error.rs  lib.rs  main.rs  meters.rs  state.rs  tray.rs
(+69 files in other folders)
