[workspace]
resolver = "2"
members = ["crates/domain", "crates/device", "crates/audio", "crates/cli", "crates/client", "crates/config", "crates/engine", "src-tauri"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.78"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
hidapi = { version = "2", default-features = false, features = ["linux-native"] }
arctis-domain = { path = "crates/domain" }
arctis-device = { path = "crates/device" }
arctis-audio = { path = "crates/audio" }
arctis-config = { path = "crates/config" }
arctis-engine = { path = "crates/engine" }
arctis-client = { path = "crates/client" }
serde_json = "1"
libc = "0.2"
