[package]
name = "arctis-sound-manager-ui"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "arctis_sound_manager_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["sync", "time", "macros", "rt-multi-thread"] }
arctis-client = { workspace = true }
arctis-engine = { workspace = true }
