[package]
name = "arctis-sound-manager-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "arctis_sound_manager_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
arctis-client = { workspace = true }
arctis-engine = { workspace = true }
libc = { workspace = true }
