[package]
name = "arctis-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "asm-cli"
path = "src/main.rs"

[dependencies]
arctis-domain = { workspace = true }
arctis-device = { workspace = true }
arctis-audio = { workspace = true }
arctis-client = { workspace = true }
arctis-config = { workspace = true }
arctis-engine = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
