[package]
name = "arctis-cli"
version = "0.3.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "asm-cli"
path = "src/main.rs"

[dependencies]
arctis-domain = { workspace = true }
arctis-device = { workspace = true }
arctis-audio = { workspace = true }
arctis-client = { workspace = true }
arctis-config = { workspace = true }
arctis-engine = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
libc = { workspace = true }
# Live PipeWire registry watcher (route re-apply on stream appearance).
# Optional + off by default: the `pipewire` crate links libpipewire and its
# build script needs `pipewire-devel` headers + `clang`/`libclang` (libspa-sys
# bindgen). Default builds/CI do NOT require those; the owner enables this with
# `--features pw-watcher` on the target machine. See route_watcher.rs.
pipewire = { version = "0.8", optional = true }

[features]
# Enable the live pipewire-rs route stream-watcher in the daemon.
pw-watcher = ["dep:pipewire"]
