[package]
name = "arctis-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
arctis-domain  = { workspace = true }
arctis-device  = { workspace = true }
arctis-audio   = { workspace = true }
arctis-config  = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
